--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -8,6 +8,23 @@
   grid-template-columns: 1fr 2fr 1fr;
   padding: 0 1.5rem;
   width: 100%;
+
+  @include for_breakpoint('mobile') {
+    grid-gap: 1rem;
+    grid-template-columns: max-content 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
+
+.header-sticky {
+  @include for_breakpoint('mobile') {
+    position: sticky;
+    /* Move the header up by half of its height */
+    z-index: 1000;
+    /* Ensure the header is above other content */
+    transition: transform 0.3s ease-in-out;
+    /* Smooth transition for the transform */
+  }
 }
 
 .header-logo {
@@ -34,6 +51,14 @@
   .logo {
     flex: none;
   }
+
+  @include for_breakpoint('mobile') {
+    justify-content: left;
+
+    .logo {
+      display: none;
+    }
+  }
 }
 
 .header-title {
@@ -41,6 +66,16 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 2rem;
+  text-transform: uppercase;
+
+  @include for_breakpoint('mobile') {
+    padding-bottom: 1rem;
+    position: relative;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+  }
 
   h1 {
     margin-block-end: 0.5rem;
@@ -59,6 +94,10 @@
   padding: 0 1rem;
   width: max-content;
 
+  @include for_breakpoint('mobile') {
+    display: none;
+  }
+
   i {
     vertical-align: middle;
   }
@@ -66,45 +105,8 @@
 
 .header-button-mobile {
   display: none;
-}
 
-.header-progress-bar {
-  height: 100%;
-  min-width: 185px;
-  position: relative;
-}
-
-@include for_breakpoint('mobile') {
-  .header {
-    grid-gap: 1rem;
-    grid-template-columns: max-content 1fr;
-    grid-template-rows: 1fr 1fr;
-
-    .header-progress-bar {
-      width: 100%;
-      margin-bottom: 2rem;
-      grid-column: 1 / span 2;
-    }
-  }
-
-  .header-title {
-    padding-bottom: 1rem;
-    padding-right: 75px;
-
-    .header-button {
-      display: none;
-    }
-  }
-
-  .header-logo {
-    justify-content: left;
-
-    .logo {
-      display: none;
-    }
-  }
-
-  .header-button-mobile {
+  @include for_breakpoint('mobile') {
     border-bottom: 1px solid lightgrey;
     border-left: none;
     border-right: none;
@@ -114,13 +116,16 @@
     grid-column: 1 / span 2;
     margin-left: -1.5rem;
   }
+}
 
-  .header-sticky {
-    position: sticky;
-    /* Move the header up by half of its height */
-    z-index: 1000;
-    /* Ensure the header is above other content */
-    transition: transform 0.3s ease-in-out;
-    /* Smooth transition for the transform */
+.header-progress-bar {
+  position: relative;
+  height: 100%;
+  min-width: 185px;
+
+  @include for_breakpoint('mobile') {
+    width: 100%;
+    margin-bottom: 2rem;
+    grid-column: 1 / span 2;
   }
 }
