--- a/src/styles/components/_product-card.scss
+++ b/src/styles/components/_product-card.scss
@@ -8,7 +8,6 @@
   font-size: 18px;
   margin: auto;
   min-height: 300px;
-  min-width: 250px;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -64,7 +63,11 @@
 
 .mobile-info-button {
   border: none;
+  display: inline-block;
+  padding: 0;
   background: transparent;
+  width: 100%;
+  height: inherit;
 }
 
 @include for_breakpoint('mobile') {
@@ -107,7 +110,8 @@
 .product-image {
   background-color: transparent;
   position: relative;
-  padding-bottom: 5px;
+  margin-bottom: 5px;
+  width: 100%;
 
   &:hover {
     .info-screen {
